--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "sp-model",
-  "version": "1.0.0",
-  "description": "Base model class with some static function operate db.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dongwenxiao/sp-model.git"
-  },
-  "keywords": [
-    "Model",
-    "sp-base"
-  ],
-  "author": "cs_victor@126.com",
-  "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/dongwenxiao/sp-model/issues"
-  },
-  "homepage": "https://github.com/dongwenxiao/sp-model#readme"
+    "name": "sp-model",
+    "version": "2.3.0",
+    "description": "super-project moudle for base dao operate, base on sp-mysql.",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/dongwenxiao/sp-model.git"
+    },
+    "keywords": [
+        "Model",
+        "sp-base",
+        "mysql"
+    ],
+    "author": "cs_victor@126.com",
+    "license": "Apache-2.0",
+    "bugs": {
+        "url": "https://github.com/dongwenxiao/sp-model/issues"
+    },
+    "homepage": "https://github.com/dongwenxiao/sp-model#readme"
 }
