--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "sp-model",
-    "version": "2.3.0",
+    "version": "2.4.0",
     "description": "super-project moudle for base dao operate, base on sp-mysql.",
     "main": "index.js",
     "scripts": {
@@ -11,8 +11,8 @@
         "url": "git+https://github.com/dongwenxiao/sp-model.git"
     },
     "keywords": [
-        "Model",
-        "sp-base",
+        "super-project",
+        "model",
         "mysql"
     ],
     "author": "cs_victor@126.com",
@@ -20,5 +20,8 @@
     "bugs": {
         "url": "https://github.com/dongwenxiao/sp-model/issues"
     },
-    "homepage": "https://github.com/dongwenxiao/sp-model#readme"
+    "homepage": "https://github.com/dongwenxiao/sp-model#readme",
+    "dependencies": {
+        "sp-mysql": "^1.1.0"
+    }
 }
